# aocpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  justfile  main.cpp
app/: CMakeLists.txt
app/src/: main.cpp
libs/aoc/: CMakeLists.txt
libs/aoc/src/: aoc.cppm  puzzle_input_producer.cppm  types.cppm  utils.cppm  y2025.cppm  y2025.test.cpp
libs/aoc/src/y2025/: day1.cppm  day2.cppm
libs/core/: CMakeLists.txt
libs/core/src/: core.cppm  expected.cppm  optional.cppm  types.cppm  unreachable.cppm
libs/status/: CMakeLists.txt
libs/status/include/qubiz/status/: try.hpp
libs/status/src/: status.cppm
